[0.1h] replace Collectors.toList() with .toList() in schedule, rule, and room resources